--- a/gradle/iridium/iridium.toml
+++ b/gradle/iridium/iridium.toml
@@ -1,8 +1,8 @@
-projectTitle = "TeamVoidedTemplateMod"
-modId = "team-voided-template-mod"
-githubRepo = "Teamvoided/TeamVoidedTemplateMod"
+projectTitle = "Civilization"
+modId = "civilization"
+githubRepo = "TheEnderCore/Civilization"
 discordServerInviteId = "KZ5Q364hEg"
-authors = [ "brokenfuse" ]
+authors = [ "TheCnderCore" ]
 majorMinecraftVersion = "1.20"
 minecraftVersion = "1.20.4"
 fabricLoaderVersion = "0.15.3"
