--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,11 @@ maven_group = org.teamvoided
 modid = civilization
 archives_base_name = Civilization
 
+# Dependencies
+squaremap = 1.2.3
+sgui = 1.4.0+1.20.4
+player_data = 0.4.0+1.20.3
+server_translations = 2.2.0+1.20.3-rc1
+jts_core = 1.16.1
+
 kotlin.code.style=official
