--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 org.gradle.jvmargs=-Xmx4G
 
-mod_version = 1.0.0+1.20.1
 maven_group = org.teamvoided
+mod_version = 1.0.0
 modid = civilization
-archives_base_name = Civilization
+mod_name = Civilization
+description = Civilization Mod Description
 
-# Dependencies
-squaremap = 1.2.3
-sgui = 1.4.0+1.20.4
-player_data = 0.4.0+1.20.3
-server_translations = 2.2.0+1.20.3-rc1
-jts_core = 1.16.1
+# Modrinth and CurseForge Ids for this project
+modrinth_id = id
+curse_id = 0
+
+archives_base_name = civilization
 
 kotlin.code.style=official
